--- a/package.json
+++ b/package.json
@@ -34,17 +34,32 @@
   "sideEffects": false,
   "type": "module",
   "main": "1.js",
+  "types": "index.d.ts",
   "files": [
+    "1-a2-to-1-a3.d.ts",
     "1-a2-to-1-a3.js",
+    "1-a2-to-1-n.d.ts",
     "1-a2-to-1-n.js",
+    "1-a3-to-1-a2.d.ts",
     "1-a3-to-1-a2.js",
+    "1-n-to-1-a2.d.ts",
     "1-n-to-1-a2.js",
+    "1-reserved.d.ts",
     "1-reserved.js",
+    "1.d.ts",
     "1.js",
+    "2.d.ts",
     "2.js",
+    "3.d.ts",
     "3.js"
   ],
   "devDependencies": {
+    "@types/hast": "^2.0.0",
+    "@types/mdast": "^3.0.0",
+    "@types/node": "^14.0.0",
+    "@types/node-fetch": "^2.0.0",
+    "@types/tape": "^4.0.0",
+    "@types/unist": "^2.0.0",
     "bail": "^2.0.0",
     "c8": "^7.0.0",
     "concat-stream": "^2.0.0",
@@ -60,17 +75,22 @@
     "rehype-stringify": "^8.0.0",
     "remark-cli": "^9.0.0",
     "remark-preset-wooorm": "^8.0.0",
+    "rimraf": "^3.0.0",
     "tape": "^5.0.0",
+    "type-coverage": "^2.0.0",
+    "typescript": "^4.0.0",
     "unified": "^9.0.0",
     "unist-builder": "^2.0.0",
     "xo": "^0.38.0"
   },
   "scripts": {
+    "prepack": "npm run build && npm run format",
+    "build": "rimraf \"*.d.ts\" && tsc && type-coverage",
     "generate": "node build",
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
     "test-api": "node test.js",
     "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node test.js",
-    "test": "npm run format && npm run test-coverage"
+    "test": "npm run build && npm run format && npm run test-coverage"
   },
   "prettier": {
     "tabWidth": 2,
@@ -98,5 +118,10 @@
     "plugins": [
       "preset-wooorm"
     ]
+  },
+  "typeCoverage": {
+    "atLeast": 100,
+    "detail": true,
+    "strict": true
   }
 }
