Fix several names in ISO 3166-2
This fixes names with different translations, such as
`ValenciaValència` (for `ES-V`) and `Tyva, Respublika(local variant is Tuva)`
(for `RU-TY`), to use the common spelling in the entire country: `Valencia`,
`Tyva, Respublika`.

Closes GH-3.
Closes GH-4.

Co-authored-by: Adrià López <adria.lopez.ortega@gmail.com>

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "c8": "^7.0.0",
     "concat-stream": "^2.0.0",
     "hast-util-select": "^5.0.0",
-    "hast-util-to-string": "^2.0.0",
+    "hast-util-to-text": "^3.0.0",
     "hastscript": "^7.0.0",
     "mdast-util-heading-range": "^3.0.0",
     "node-fetch": "^3.0.0",
