--- a/package.json
+++ b/package.json
@@ -56,37 +56,37 @@
     "index.js"
   ],
   "devDependencies": {
-    "@types/hast": "^2.0.0",
-    "@types/mdast": "^3.0.0",
-    "@types/node": "^18.0.0",
+    "@types/hast": "^3.0.0",
+    "@types/mdast": "^4.0.0",
+    "@types/node": "^20.0.0",
     "@types/node-fetch": "^3.0.0",
-    "@types/unist": "^2.0.0",
+    "@types/unist": "^3.0.0",
     "bail": "^2.0.0",
-    "c8": "^7.0.0",
+    "c8": "^8.0.0",
     "concat-stream": "^2.0.0",
-    "hast-util-select": "^5.0.0",
-    "hast-util-to-text": "^3.0.0",
-    "hastscript": "^7.0.0",
-    "mdast-util-heading-range": "^3.0.0",
+    "hast-util-select": "^6.0.0",
+    "hast-util-to-text": "^4.0.0",
+    "hastscript": "^8.0.0",
+    "mdast-util-heading-range": "^4.0.0",
     "node-fetch": "^3.0.0",
-    "p-map": "^5.0.0",
-    "prettier": "^2.0.0",
-    "rehype-format": "^4.0.0",
-    "rehype-parse": "^8.0.0",
-    "rehype-stringify": "^9.0.0",
+    "p-map": "^6.0.0",
+    "prettier": "^3.0.0",
+    "rehype-format": "^5.0.0",
+    "rehype-parse": "^9.0.0",
+    "rehype-stringify": "^10.0.0",
     "remark-cli": "^11.0.0",
     "remark-preset-wooorm": "^9.0.0",
     "type-coverage": "^2.0.0",
-    "typescript": "^4.0.0",
-    "unified": "^10.0.0",
-    "unist-builder": "^3.0.0",
-    "xo": "^0.53.0"
+    "typescript": "^5.0.0",
+    "unified": "^11.0.0",
+    "unist-builder": "^4.0.0",
+    "xo": "^0.56.0"
   },
   "scripts": {
     "prepack": "npm run build && npm run format",
     "generate": "node --conditions development build.js",
     "build": "tsc --build --clean && tsc --build && type-coverage",
-    "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
+    "format": "remark . -qfo && prettier . -w --log-level warn && xo --fix",
     "test-api": "node --conditions development test.js",
     "test-coverage": "c8 --check-coverage --100 --reporter lcov npm run test-api",
     "test": "npm run build && npm run format && npm run test-coverage"
@@ -103,7 +103,8 @@
     "prettier": true,
     "rules": {
       "complexity": "off",
-      "max-depth": "off"
+      "max-depth": "off",
+      "unicorn/prefer-string-replace-all": "off"
     }
   },
   "remarkConfig": {
