--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "bail": "^2.0.0",
     "c8": "^8.0.0",
     "concat-stream": "^2.0.0",
+    "hast-util-from-html": "^2.0.0",
     "hast-util-select": "^6.0.0",
+    "hast-util-to-html": "^9.0.0",
     "hast-util-to-text": "^4.0.0",
     "hastscript": "^8.0.0",
     "mdast-util-heading-range": "^4.0.0",
@@ -72,8 +74,6 @@
     "p-map": "^6.0.0",
     "prettier": "^3.0.0",
     "rehype-format": "^5.0.0",
-    "rehype-parse": "^9.0.0",
-    "rehype-stringify": "^10.0.0",
     "remark-cli": "^11.0.0",
     "remark-preset-wooorm": "^9.0.0",
     "type-coverage": "^2.0.0",
